fix scroll not working sometimes caused by container overflow

--- a/src/components/modal-page-with-navigation/styles.module.scss
+++ b/src/components/modal-page-with-navigation/styles.module.scss
@@ -4,6 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  overflow: hidden;
   background-color: #171c28;
   display: flex;
   flex-direction: column;
